# scImmuneATLAS

./: .gitignore  .pre-commit-config.yaml  =1.24  LICENSE  Makefile  README.md  STREAMLIT_REPERTOIRE_GUIDE.md  Snakefile  TESTING_TCR_MODULE.md  env.cpu.yml  env.nomamba.yml  env.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml
app/: streamlit_app.py
config/: atlas.yaml
data/raw/: BREAST_CENSUS_downloaded.flag  MELANOMA_CENSUS_downloaded.flag  NSCLC_CENSUS_downloaded.flag  NSCLC_NIVO_IPI_CENSUS_downloaded.flag  NSCLC_PEMBROLIZUMAB_CENSUS_downloaded.flag  PDAC_ICI_CENSUS_downloaded.flag  RCC_COMBINATION_CENSUS_downloaded.flag  RCC_NIVOLUMAB_CENSUS_downloaded.flag  UROTHELIAL_ATEZOLIZUMAB_CENSUS_downloaded.flag
docs/: blog_post_outline.md  example_tcr_report_section.md  portfolio_one_pager.md  resume_blurbs.md  tcr_pipeline_code_diffs.md  tcr_pipeline_integration.md  tcr_report_integration_summary.md  upgrade_plan.md  video_walkthrough_script.md
env/: base.yml  gpu.yml
notebooks/: 00_explore_inputs.ipynb  01_qc_and_doublets.ipynb  02_integration.ipynb  03_annotation_and_markers.ipynb  04_proportions_and_signatures.ipynb  atlas_interpretation.ipynb  metadata_integration_example.ipynb
processed/: report.md
processed/cellxgene_release/: metadata_summary.txt
scripts/: bootstrap_micromamba.sh  fetch_cellxgene_no_cap.sh  run_pipeline_after_fetch.sh  watch_fetch_then_pipeline.sh
src/atlas/: __init__.py  annotate.py  benchmark.py  cli.py  doublets.py  export.py  fetch_census.py  integration.py  io.py  qc.py  receptors_io.py  schemas.py  tcr.py  tcr_viz.py  utils.py  viz.py  (+1 more)
tests/: README_TCR_TESTS.md  conftest.py  requirements.txt  test_cli_pipeline.py  test_demo_utils.py  test_io.py  test_qc.py  test_receptors_io.py  test_smoke.py  test_tcr.py  test_tcr_viz.py  test_workflow.py
(+8 files in other folders)
