[metadata]
name = single-cell-immune-atlas
version = 0.1.0
description = Production-quality Single-cell Immune Atlas with batch correction and annotation
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Single-cell Immune Atlas Contributors

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.10
install_requires =
    scanpy
    anndata
    pandas
    numpy
    matplotlib
    plotly
    seaborn
    scikit-learn
    scrublet
    harmonypy
    scvi-tools
    umap-learn
    streamlit
    pyyaml
    requests
    pandera

[options.packages.find]
where = src

[flake8]
max-line-length = 88
extend-ignore = E203, W503
